tests/compile_failures/bad_setting_name_splitbits.rs
use splitbits::*;

fn main() {
    splitbits!(pokemon=standard, 0b11011101, "aaabbccc");
}
